caddy: configure Caddy + php-fpm on Alpine Linux
php-fpm on Alpine Linux does not default to using a Unix socket. I
don't know enough to have an opinion on whether this is good or not,
but it seems good to support this option, even if technically I could
simply change the php-fpm config to use a Unix socket, as Arch and
Ubuntu do by default.

--- a/roles/sunrise/templates/LocalCaddyfile.j2
+++ b/roles/sunrise/templates/LocalCaddyfile.j2
@@ -78,7 +78,11 @@
 www.sunrisepvd.com {
 	root * /srv/sunrisepvd.com/www/public
 	import boilerplate
+{% if php_fpm_unix_socket is defined %}
 	php_fastcgi unix/{{ php_fpm_unix_socket }}
+{% elif php_fpm_socket is defined %}
+	php_fastcgi {{ php_fpm_socket }}
+{% endif %}
 	header {
 		Content-Security-Policy: " default-src 'none'; font-src https://fonts.gstatic.com; frame-src https://www.youtube.com; img-src 'self' https://actionnetwork.org; object-src https://actionnetwork.org/includes/js/can-embed.js https://actionnetwork.org/includes/js/jquery-min.js; script-src 'self' 'unsafe-inline' https://actionnetwork.org/includes/js/can-embed.js https://actionnetwork.org/includes/js/jquery-min.js https://actionnetwork.org/widgets/v3/form/join-the-sunrise-movement-in-providence; style-src 'self' 'unsafe-inline' https://actionnetwork.org/css/ https://fonts.googleapis.com/; frame-ancestors 'none'; base-uri 'none'"
 		X-Content-Type-Options: "nosniff"
