hugo: fix Content-Security-Policy for javascript

--- a/roles/sunrise/templates/Caddyfile.j2
+++ b/roles/sunrise/templates/Caddyfile.j2
@@ -126,7 +126,7 @@ www.robertmcfaddenmd.com {
 	root * /srv/robertmcfaddenmd.com/www/public
 	import boilerplate
 	header {
-		Content-Security-Policy: "default-src 'none'; connect-src https://l.sharethis.com/pview; font-src https://fonts.gstatic.com https://netdna.bootstrapcdn.com; img-src 'self'; script-src 'unsafe-inline' https://code.jquery.com/jquery-1.12.4.min.js https://netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js https://platform-api.sharethis.com/js/sharethis.js https://use.fontawesome.com/releases/v5.3.1/js/all.js https://www.robertmcfaddenmd.comjs/template.js; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com/ https://netdna.bootstrapcdn.com/bootstrap/3.0.0/css/"
+		Content-Security-Policy: "default-src 'none'; connect-src https://l.sharethis.com/pview; font-src https://fonts.gstatic.com https://netdna.bootstrapcdn.com; img-src 'self'; script-src 'unsafe-inline' https://code.jquery.com/jquery-1.12.4.min.js https://netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js https://platform-api.sharethis.com/js/sharethis.js https://use.fontawesome.com/releases/v5.3.1/js/all.js https://www.robertmcfaddenmd.com/js/template.js; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com/ https://netdna.bootstrapcdn.com/bootstrap/3.0.0/css/"
 		X-Content-Type-Options: "nosniff"
 	}
 }
