caddy: add temporary redir for maximumethics.org
We had a problem where maximumethics.org was pointing at Linode's
nameservers but we forgot to do anything with it. Until we have an
official site, we can at least show people the content on the dev
site.

--- a/roles/sunrise/templates/LocalCaddyfile.j2
+++ b/roles/sunrise/templates/LocalCaddyfile.j2
@@ -104,6 +104,11 @@ www.maximumethics.dev {
 }
 import redir-to-www maximumethics.dev
 
+# temporarily redirect until we have official content
+maximumethics.org {
+	redir https://www.maximumethics.dev
+}
+
 nelson.pavlosky.net {
 	root * /srv/pavlosky.net/nelson/public
 	import boilerplate
