--- a/roles/sunrise/templates/Caddyfile.j2
+++ b/roles/sunrise/templates/Caddyfile.j2
@@ -103,6 +103,11 @@ www.maximumethics.dev {
 }
 import redir-to-www maximumethics.dev
 
+# temporarily redirect until we have official content
+maximumethics.org {
+	redir https://www.maximumethics.dev
+}
+
 nelson.pavlosky.net {
 	root * /srv/pavlosky.net/nelson/public
 	import boilerplate
