Caddy: redirect stairball.org to stairball.club

--- a/roles/sunrise/templates/Caddyfile.j2
+++ b/roles/sunrise/templates/Caddyfile.j2
@@ -136,3 +136,9 @@ www.robertmcfaddenmd.com {
 	}
 }
 import redir-to-www robertmcfaddenmd.com
+
+# Wordpress sites (personal)
+
+stairball.org {
+	redir https://www.stairball.club{uri} permanent
+}
