--- a/roles/sunrise/templates/LocalCaddyfile.j2
+++ b/roles/sunrise/templates/LocalCaddyfile.j2
@@ -137,3 +137,9 @@ www.robertmcfaddenmd.com {
 	}
 }
 import redir-to-www robertmcfaddenmd.com
+
+# Wordpress sites (personal)
+
+stairball.org {
+	redir https://www.stairball.club{uri} permanent
+}
