Caddy: redirect maximumethics.com too

--- a/roles/sunrise/templates/LocalCaddyfile.j2
+++ b/roles/sunrise/templates/LocalCaddyfile.j2
@@ -105,6 +105,7 @@ www.maximumethics.dev {
 import redir-to-www maximumethics.dev
 
 # temporarily redirect until we have official content
+maximumethics.com,
 maximumethics.org {
 	redir https://www.maximumethics.dev
 }
