Caddy: try redirecting www subdomains too

--- a/roles/sunrise/templates/Caddyfile.j2
+++ b/roles/sunrise/templates/Caddyfile.j2
@@ -105,7 +105,9 @@ import redir-to-www maximumethics.dev
 
 # temporarily redirect until we have official content
 maximumethics.com,
-maximumethics.org {
+www.maximumethics.com,
+maximumethics.org,
+www.maximumethics.org {
 	redir https://www.maximumethics.dev
 }
 
@@ -140,6 +142,7 @@ import redir-to-www robertmcfaddenmd.com
 
 # Wordpress sites (personal)
 
-stairball.org {
+stairball.org,
+www.stairball.org {
 	redir https://www.stairball.club{uri} permanent
 }
