save characters in test CSS
:root doesn't really make sense because we're not applying this CSS to
anything but HTML. Use html instead:
https://meiert.com/en/blog/questioning-root/

--- a/roles/sunrise/files/style.css
+++ b/roles/sunrise/files/style.css
@@ -1,12 +1,10 @@
-/* CSS Variables */
-:root {
+html {
 	--background: #fff;
 	--color: #000;
 }
 
-/* Define colors for dark mode */
 @media (prefers-color-scheme: dark) {
-	:root {
+	html {
 		--background: #000;
 		--color: snow;
 	}
