--- a/roles/sunrise/files/style.css
+++ b/roles/sunrise/files/style.css
@@ -16,7 +16,7 @@ body {
 	font-family: Liberation Sans,Arial,Roboto,Helvetica,FreeSans,sans-serif;
 	line-height: 1.45;
   margin: auto;
-	max-width: 72ch; /* fallback for browsers w/o clamp */
+	max-width: 41em; /* fallback for browsers w/o clamp */
 	max-width: clamp(48ch, 80vw, 72ch);
 	padding: 0 1ch;
 }
