--- a/roles/sunrise/templates/LocalCaddyfile.j2
+++ b/roles/sunrise/templates/LocalCaddyfile.j2
@@ -147,3 +147,13 @@ stairball.org,
 www.stairball.org {
 	redir https://www.stairball.club{uri} permanent
 }
+
+www.skyfaller.space {
+	root * /srv/skyfaller.space/static/
+	import boilerplate
+	header {
+		 Content-Security-Policy: "default-src 'none'; connect-src 'self' https://embedr.flickr.com/photosets/72157594438128195; font-src 'self'; form-action 'none'; frame-src https://embed.spotify.com https://embed.tumblr.com https://player.vimeo.com https://w.soundcloud.com https://www.youtube.com; img-src 'self' *.flickr.com https://live.staticflickr.com https://secure.gravatar.com; script-src 'self' 'unsafe-eval' 'unsafe-inline' https://assets.tumblr.com/post.js https://embedr.flickr.com/assets/* https://widgets.flickr.com/embedr/embedr-47ad26da5deade67d472950b12c94b6c.js; style-src 'self' 'unsafe-inline'"
+		 X-Content-Type-Options: "nosniff"
+	}
+}
+import redir-to-www skyfaller.space
