--- a/roles/sunrise/files/style.css
+++ b/roles/sunrise/files/style.css
@@ -1,18 +1,11 @@
-html {
-	--background: #fff;
-	--color: #000;
-}
-
 @media (prefers-color-scheme: dark) {
 	html {
-		--background: #000;
-		--color: snow;
+		background-color: #000;
+		color: snow;
 	}
 }
 
 body {
-	background-color: var(--background);
-	color: var(--color);
 	font-family: Liberation Sans,Arial,Roboto,Helvetica,FreeSans,sans-serif;
 	line-height: 1.45;
   margin: auto;
