Caddy: add upgrade-insecure-requests to CSP
I haven't figured out a quick way to update all of the old insecure
HTTP urls in my Wordpress blog. For now, let's force them to HTTPS.

--- a/roles/sunrise/templates/LocalCaddyfile.j2
+++ b/roles/sunrise/templates/LocalCaddyfile.j2
@@ -152,7 +152,7 @@ www.skyfaller.space {
 	root * /srv/skyfaller.space/static/
 	import boilerplate
 	header {
-		 Content-Security-Policy: "default-src 'none'; connect-src 'self' https://embedr.flickr.com/photosets/72157594438128195; font-src 'self'; form-action 'none'; frame-src https://embed.spotify.com https://embed.tumblr.com https://player.vimeo.com https://w.soundcloud.com https://www.youtube.com; img-src 'self' *.flickr.com https://live.staticflickr.com https://secure.gravatar.com; script-src 'self' 'unsafe-eval' 'unsafe-inline' https://assets.tumblr.com/post.js https://embedr.flickr.com/assets/* https://widgets.flickr.com/embedr/embedr-47ad26da5deade67d472950b12c94b6c.js; style-src 'self' 'unsafe-inline'"
+		 Content-Security-Policy: "default-src 'none'; connect-src 'self' https://embedr.flickr.com/photosets/72157594438128195; font-src 'self'; form-action 'none'; frame-src https://embed.spotify.com https://embed.tumblr.com https://player.vimeo.com https://w.soundcloud.com https://www.youtube.com; img-src 'self' *.flickr.com https://live.staticflickr.com https://secure.gravatar.com; script-src 'self' 'unsafe-eval' 'unsafe-inline' https://assets.tumblr.com/post.js https://embedr.flickr.com/assets/* https://widgets.flickr.com/embedr/embedr-47ad26da5deade67d472950b12c94b6c.js; style-src 'self' 'unsafe-inline'; upgrade-insecure-requests"
 		 X-Content-Type-Options: "nosniff"
 	}
 }
