static Wordpress version of stairball.club
I'm not adding the static zip once again, because we don't want to
store large binaries in this repo unnecessarily.

Also, because of DNS annoyances we're testing it at
static.stairball.org for now.

--- a/roles/sunrise/templates/LocalCaddyfile.j2
+++ b/roles/sunrise/templates/LocalCaddyfile.j2
@@ -148,6 +148,16 @@ www.stairball.org {
 	redir https://www.stairball.club{uri} permanent
 }
 
+www.stairball.club {
+	root * /srv/stairball.org/static/
+	import boilerplate
+	header {
+		Content-Security-Policy: "default-src 'none'; font-src 'self'; img-src 'self' https://farm4.staticflickr.com https://live.staticflickr.com https://s.w.org; script-src 'self' 'unsafe-inline'; style-src 'self' 'unsafe-inline'; frame-ancestors 'none'; base-uri 'none'; form-action 'none'; upgrade-insecure-requests"
+		X-Content-Type-Options: "nosniff"
+	}
+}
+import redir-to-www stairball.club
+
 www.skyfaller.space {
 	root * /srv/skyfaller.space/static/
 	import boilerplate
