--- a/roles/sunrise/templates/Caddyfile.j2
+++ b/roles/sunrise/templates/Caddyfile.j2
@@ -147,8 +147,8 @@ www.stairball.org {
 	redir https://www.stairball.club{uri} permanent
 }
 
-static.stairball.org {
-	root * /srv/stairball.org/static/
+static.stairball.club {
+	root * /srv/stairball.club/static/
 	import boilerplate
 	header {
 		Content-Security-Policy: "default-src 'none'; font-src 'self'; img-src 'self' https://farm4.staticflickr.com https://live.staticflickr.com https://s.w.org; script-src 'self' 'unsafe-inline'; style-src 'self' 'unsafe-inline'; frame-ancestors 'none'; base-uri 'none'; form-action 'none'; upgrade-insecure-requests"
