test page: simplify dark mode CSS
If we don't care about the exact colors, we can enable dark mode in
one line:
https://twitter.com/codepo8/status/1539004582541418496
https://developer.mozilla.org/en-US/docs/Web/CSS/color-scheme

--- a/roles/sunrise/files/style.css
+++ b/roles/sunrise/files/style.css
@@ -1,8 +1,5 @@
-@media (prefers-color-scheme: dark) {
-	html {
-		background-color: #000;
-		color: snow;
-	}
+html {
+	color-scheme: dark light;
 }
 
 body {
