add Hugo site to test Bookshop
This shouldn't be a functional Bookshop site after running these
steps, I believe we'll have to run a bunch of NPM commands next:
https://github.com/CloudCannon/bookshop/blob/main/guides/hugo.adoc#creating-your-bookshop

--- a/roles/sunrise/templates/Caddyfile.j2
+++ b/roles/sunrise/templates/Caddyfile.j2
@@ -111,6 +111,11 @@ www.maximumethics.org {
 	redir https://www.maximumethics.dev
 }
 
+bookshop.maximumethics.dev {
+	root * /srv/maximumethics.dev/bookshop/public
+	import boilerplate
+}
+
 nelson.pavlosky.net {
 	root * /srv/pavlosky.net/nelson/public
 	import boilerplate
