--- a/roles/sunrise/templates/LocalCaddyfile.j2
+++ b/roles/sunrise/templates/LocalCaddyfile.j2
@@ -158,6 +158,10 @@ www.stairball.club {
 }
 import redir-to-www stairball.club
 
+skyfaller.net,
+www.skyfaller.net {
+	redir https://www.skyfaller.space{uri} permanent
+}
 www.skyfaller.space {
 	root * /srv/skyfaller.space/static/
 	import boilerplate
