--- a/roles/sunrise/templates/index.html.j2
+++ b/roles/sunrise/templates/index.html.j2
@@ -1,7 +1,7 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang=en-us>
 
-<title>Test Page</title>
+<title>Test page</title>
 <meta name=description content="Minimal HTML page to test whether this web server works.">
 <meta name=viewport content="width=device-width, initial-scale=1">
 <link rel=stylesheet href=/style.css>
@@ -9,7 +9,7 @@
 
 <body>
 <main>
-<h1>Test Page
+<h1>Test page
 {%- if ansible_hostname == "america" %}
  🦅
 {%- elif ansible_hostname == "banana" %}
