hugo: add Annie's website (and my test page)

--- a/roles/sunrise/templates/Caddyfile.j2
+++ b/roles/sunrise/templates/Caddyfile.j2
@@ -68,7 +68,18 @@
 	}
 }
 
+# Annie test
+annie.maximumethics.dev {
+  root * /srv/maximumethics.dev/annie/public/
+  import boilerplate
+}
+
 # Hugo sites
+anne.maximumethics.dev {
+	root * /srv/maximumethics.dev/anne/public/
+	import boilerplate
+}
+
 www.maximumethics.dev {
 	root * /srv/maximumethics.dev/www/public
 	encode gzip zstd
