--- a/roles/sunrise/templates/LocalCaddyfile.j2
+++ b/roles/sunrise/templates/LocalCaddyfile.j2
@@ -86,6 +86,11 @@ www.sunrisepvd.com {
 import redir-to-www sunrisepvd.com
 
 # Hugo sites
+anne.maximumethics.dev {
+	root * /srv/maximumethics.dev/anne/public/
+	import boilerplate
+}
+
 www.maximumethics.dev {
 	root * /srv/maximumethics.dev/www/public
 	encode gzip zstd
