--- a/roles/sunrise/templates/Caddyfile.j2
+++ b/roles/sunrise/templates/Caddyfile.j2
@@ -6,10 +6,10 @@
 # reusable snippets: https://caddyserver.com/docs/caddyfile/concepts#snippets
 (cache-plz) {
 	@cachedFiles {
-		path *.jpg *.jpeg *.webp
+		path *.jpg *.jpeg *.webp *.png *.ico *.mp4 *.webm
 	}
 	@checkCache {
-		path *.css
+		path *.css *.woff2
 	}
 	header @cachedFiles Cache-Control "public, max-age=31536000, must-revalidate"
 	header @checkCache Cache-Control no-cache
